processing user registration from RegisterAuthenticationToken